zero-schema-macros/tests/ui/fail/20_collision_schema_align.rs
use zero_schema_macros::zero;

#[zero]
struct SchemaAlignCollision {
    SCHEMA_ALIGN: u8,
}

fn main() {}
